TestSuite/errors/err0311.pas
begin
  var s := [1..'3'];
end.